--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ext-curl": "*",
+        "ext-gd": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-mysqli": "*",
@@ -27,6 +28,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.8",
+        "laravel/vapor-cli": "^1.65",
+        "laravel/vapor-core": "^2.37",
         "laravelpkg/laravelchk": "dev-master",
         "lcobucci/jwt": "^4.1",
         "league/flysystem-aws-s3-v3": "*",
@@ -48,8 +51,7 @@
         "symfony/translation": "^6.4",
         "twilio/sdk": "^7.14",
         "unicodeveloper/laravel-paystack": "^1.1",
-        "xendit/xendit-php": "^4.1",
-        "ext-gd": "*"
+        "xendit/xendit-php": "^4.1"
     },
     "require-dev": {
         "amirami/localizator": "^0.12@alpha",
