--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,26 @@
 .phpunit.result.cache
 .DS_Store
 .env.devlpmnt
-node_modules
+/node_modules
+/vendor
+/storage
+.gitignore
+composer.lock
+/node_modules
+/public/hot
+/public/storage
+/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+auth.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+storage/framework/cache/data/
+/public/assets
+/temp
