--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
+        "laravel/octane": "^2.4",
         "laravel/passport": "^11.0",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.2",
